[package]
name = "async-await-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
error-chain = "0.12.4"
tokio = { version = "*", features = ["full"] }
# Tokio is an event-driven, non-blocking I/O platform for writing asynchronous applications with the Rust programming language. At a high level, it provides a few major components
# https://docs.rs/tokio/latest/tokio/
